# torcs-server

./: .gitignore  CMakeLists.txt  reinstall  start_parallel_neat.sh  to add to drivers
config/: example_torcs_config_test.xml  example_torcs_config_test0.xml  example_torcs_config_test2.xml  example_torcs_config_test3.xml  example_torcs_config_test4.xml  example_torcs_config_test5.xml  example_torcs_config_test6.xml  example_torcs_config_test7.xml  example_torcs_config_test8.xml  example_torcs_config_test9.xml
results/: aalborg_test  forza_1  forza_3  forza_4  forza_test  manual_2017-11-13_02-53-24  manual_2017-11-13_02-54-10  manual_2017-11-13_03-01-42  manual_2017-11-13_03-02-36  manual_2017-11-13_03-11-48  manual_2017-11-13_21-48-54  manual_2017-11-13_21-49-31  manual_2017-11-13_21-50-15  manual_2017-11-13_21-55-51  manual_2017-11-13_21-56-27  manual_2017-11-13_21-57-21  manual_2017-11-15_16-28-46  manual_2017-11-15_16-52-54  manual_2017-11-15_16-58-58  manual_2017-11-15_17-00-11  manual_2017-11-15_17-04-42  manual_2017-11-15_17-08-35  manual_2017-11-18_02-56-16  prova2
torcs-1.3.7-patched/: .torcs.rc  ciao  config.status  log  reinstall  zz_manual_print
torcs-1.3.7-patched/export/include/: car.h  client.h  controlconfig.h  driverconfig.h  exitmenu.h  glfeatures.h  graphconfig.h  graphic.h  joystickconfig.h  mouseconfig.h  openglconfig.h  os.h  osspec.h  playerpref.h  portability.h  raceinit.h  raceman.h  racescreens.h  replay.h  robot.h  robottools.h  screen_properties.h  simu.h  simuconfig.h  singleplayer.h  soundconfig.h  telemetry.h  tgf.h  tgfclient.h  track.h  xml.h  xmlparse.h
torcs-1.3.7-patched/export/include/3D/: Basic.h  Matrix.h  Point.h  Quaternion.h  Tuple3.h  Tuple4.h  Vector.h
torcs-1.3.7-patched/export/include/SOLID/: solid.h
torcs-1.3.7-patched/export/include/learning/: ANN.h  Distribution.h  List.h  MathFunctions.h  ann_policy.h  learn_debug.h  policy.h  real.h  string_utils.h
torcs-1.3.7-patched/export/include/musicplayer/: OggSoundStream.h  OpenALMusicPlayer.h  SoundStream.h  musicplayer.h
torcs-1.3.7-patched/export/include/tmath/: linalg_t.h  straight2_t.h  v2_t.h  v3_t.h  v4_t.h
torcs-1.3.7-patched/src/doc/: torcsdoc.conf
torcs-1.3.7-patched/src/drivers/berniw/: .depend
torcs-1.3.7-patched/src/drivers/berniw2/: .depend
torcs-1.3.7-patched/src/drivers/berniw3/: .depend
torcs-1.3.7-patched/src/drivers/bt/: .depend
torcs-1.3.7-patched/src/drivers/damned/: .depend
torcs-1.3.7-patched/src/drivers/human/: .depend  Makefile  human.cpp  human.h
torcs-1.3.7-patched/src/drivers/inferno/: .depend
torcs-1.3.7-patched/src/drivers/inferno2/: .depend
torcs-1.3.7-patched/src/drivers/lliaw/: .depend  Makefile  lliaw.cpp
torcs-1.3.7-patched/src/drivers/olethros/: .depend
torcs-1.3.7-patched/src/drivers/scr_server/: .depend  scr_server.cpp
torcs-1.3.7-patched/src/drivers/sparkle/: .depend
torcs-1.3.7-patched/src/drivers/tita/: .depend
torcs-1.3.7-patched/src/interfaces/: raceman.h
torcs-1.3.7-patched/src/libs/client/: .depend
torcs-1.3.7-patched/src/libs/confscreens/: .depend
torcs-1.3.7-patched/src/libs/learning/: .depend
torcs-1.3.7-patched/src/libs/musicplayer/: .depend
torcs-1.3.7-patched/src/libs/raceengineclient/: .depend  raceengine.cpp  raceinit.cpp  racemain.cpp  racemain.h  racestate.cpp
torcs-1.3.7-patched/src/libs/racescreens/: .depend
torcs-1.3.7-patched/src/libs/robottools/: .depend
torcs-1.3.7-patched/src/libs/tgf/: .depend
torcs-1.3.7-patched/src/libs/tgfclient/: .depend
torcs-1.3.7-patched/src/libs/txml/: .depend
torcs-1.3.7-patched/src/libs/txml/gennmtab/: gennmtab
torcs-1.3.7-patched/src/linux/: .depend  torcs-bin
torcs-1.3.7-patched/src/modules/graphic/ssggraph/: .depend
torcs-1.3.7-patched/src/modules/simu/simuv2/: .depend
torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/: .depend
torcs-1.3.7-patched/src/modules/telemetry/: .depend
torcs-1.3.7-patched/src/modules/track/: .depend
torcs-1.3.7-patched/src/tools/accc/: .depend  accc-bin
torcs-1.3.7-patched/src/tools/nfs2ac/: nfs2ac-bin
torcs-1.3.7-patched/src/tools/nfsperf/: .depend  nfsperf-bin
torcs-1.3.7-patched/src/tools/texmapper/: .depend  texmapper-bin
torcs-1.3.7-patched/src/tools/trackgen/: .depend  trackgen-bin
