cmake_minimum_required(VERSION 3.8)
project(torcs_server)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        torcs-1.3.7-patched/src/doc/torcsdoc.h
        torcs-1.3.7-patched/src/drivers/berniw/berniw.cpp
        torcs-1.3.7-patched/src/drivers/berniw/berniw.h
        torcs-1.3.7-patched/src/drivers/berniw/linalg.h
        torcs-1.3.7-patched/src/drivers/berniw/mycar.cpp
        torcs-1.3.7-patched/src/drivers/berniw/mycar.h
        torcs-1.3.7-patched/src/drivers/berniw/pathfinder.cpp
        torcs-1.3.7-patched/src/drivers/berniw/pathfinder.h
        torcs-1.3.7-patched/src/drivers/berniw/spline.cpp
        torcs-1.3.7-patched/src/drivers/berniw/spline.h
        torcs-1.3.7-patched/src/drivers/berniw/trackdesc.cpp
        torcs-1.3.7-patched/src/drivers/berniw/trackdesc.h
        torcs-1.3.7-patched/src/drivers/berniw2/berniw.h
        torcs-1.3.7-patched/src/drivers/berniw2/berniw2.cpp
        torcs-1.3.7-patched/src/drivers/berniw2/linalg.h
        torcs-1.3.7-patched/src/drivers/berniw2/mycar.cpp
        torcs-1.3.7-patched/src/drivers/berniw2/mycar.h
        torcs-1.3.7-patched/src/drivers/berniw2/pathfinder.cpp
        torcs-1.3.7-patched/src/drivers/berniw2/pathfinder.h
        torcs-1.3.7-patched/src/drivers/berniw2/spline.cpp
        torcs-1.3.7-patched/src/drivers/berniw2/spline.h
        torcs-1.3.7-patched/src/drivers/berniw2/trackdesc.cpp
        torcs-1.3.7-patched/src/drivers/berniw2/trackdesc.h
        torcs-1.3.7-patched/src/drivers/berniw3/berniw.h
        torcs-1.3.7-patched/src/drivers/berniw3/berniw3.cpp
        torcs-1.3.7-patched/src/drivers/berniw3/linalg.h
        torcs-1.3.7-patched/src/drivers/berniw3/mycar.cpp
        torcs-1.3.7-patched/src/drivers/berniw3/mycar.h
        torcs-1.3.7-patched/src/drivers/berniw3/pathfinder.cpp
        torcs-1.3.7-patched/src/drivers/berniw3/pathfinder.h
        torcs-1.3.7-patched/src/drivers/berniw3/spline.cpp
        torcs-1.3.7-patched/src/drivers/berniw3/spline.h
        torcs-1.3.7-patched/src/drivers/berniw3/trackdesc.cpp
        torcs-1.3.7-patched/src/drivers/berniw3/trackdesc.h
        torcs-1.3.7-patched/src/drivers/bt/bt.cpp
        torcs-1.3.7-patched/src/drivers/bt/cardata.cpp
        torcs-1.3.7-patched/src/drivers/bt/cardata.h
        torcs-1.3.7-patched/src/drivers/bt/driver.cpp
        torcs-1.3.7-patched/src/drivers/bt/driver.h
        torcs-1.3.7-patched/src/drivers/bt/learn.cpp
        torcs-1.3.7-patched/src/drivers/bt/learn.h
        torcs-1.3.7-patched/src/drivers/bt/opponent.cpp
        torcs-1.3.7-patched/src/drivers/bt/opponent.h
        torcs-1.3.7-patched/src/drivers/bt/pit.cpp
        torcs-1.3.7-patched/src/drivers/bt/pit.h
        torcs-1.3.7-patched/src/drivers/bt/spline.cpp
        torcs-1.3.7-patched/src/drivers/bt/spline.h
        torcs-1.3.7-patched/src/drivers/bt/strategy.cpp
        torcs-1.3.7-patched/src/drivers/bt/strategy.h
        torcs-1.3.7-patched/src/drivers/damned/cardata.cpp
        torcs-1.3.7-patched/src/drivers/damned/cardata.h
        torcs-1.3.7-patched/src/drivers/damned/damned.cpp
        torcs-1.3.7-patched/src/drivers/damned/driver.cpp
        torcs-1.3.7-patched/src/drivers/damned/driver.h
        torcs-1.3.7-patched/src/drivers/damned/learn.cpp
        torcs-1.3.7-patched/src/drivers/damned/learn.h
        torcs-1.3.7-patched/src/drivers/damned/opponent.cpp
        torcs-1.3.7-patched/src/drivers/damned/opponent.h
        torcs-1.3.7-patched/src/drivers/damned/pit.cpp
        torcs-1.3.7-patched/src/drivers/damned/pit.h
        torcs-1.3.7-patched/src/drivers/damned/spline.cpp
        torcs-1.3.7-patched/src/drivers/damned/spline.h
        torcs-1.3.7-patched/src/drivers/damned/strategy.cpp
        torcs-1.3.7-patched/src/drivers/damned/strategy.h
        torcs-1.3.7-patched/src/drivers/human/CarControl.cpp
        torcs-1.3.7-patched/src/drivers/human/CarControl.h
        torcs-1.3.7-patched/src/drivers/human/human.cpp
        torcs-1.3.7-patched/src/drivers/human/human.h
        torcs-1.3.7-patched/src/drivers/human/ObstacleSensors.cpp
        torcs-1.3.7-patched/src/drivers/human/ObstacleSensors.h
        torcs-1.3.7-patched/src/drivers/human/pref.cpp
        torcs-1.3.7-patched/src/drivers/human/pref.h
        torcs-1.3.7-patched/src/drivers/human/sensors.cpp
        torcs-1.3.7-patched/src/drivers/human/sensors.h
        torcs-1.3.7-patched/src/drivers/human/SimpleParser.cpp
        torcs-1.3.7-patched/src/drivers/human/SimpleParser.h
        torcs-1.3.7-patched/src/drivers/inferno/berniw.h
        torcs-1.3.7-patched/src/drivers/inferno/inferno.cpp
        torcs-1.3.7-patched/src/drivers/inferno/mycar.cpp
        torcs-1.3.7-patched/src/drivers/inferno/mycar.h
        torcs-1.3.7-patched/src/drivers/inferno/pathfinder.cpp
        torcs-1.3.7-patched/src/drivers/inferno/pathfinder.h
        torcs-1.3.7-patched/src/drivers/inferno/spline.cpp
        torcs-1.3.7-patched/src/drivers/inferno/spline.h
        torcs-1.3.7-patched/src/drivers/inferno/trackdesc.cpp
        torcs-1.3.7-patched/src/drivers/inferno/trackdesc.h
        torcs-1.3.7-patched/src/drivers/inferno2/common.cpp
        torcs-1.3.7-patched/src/drivers/inferno2/common.h
        torcs-1.3.7-patched/src/drivers/inferno2/inferno2.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/berniw.h
        torcs-1.3.7-patched/src/drivers/lliaw/CarControl.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/CarControl.h
        torcs-1.3.7-patched/src/drivers/lliaw/lliaw.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/mycar.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/mycar.h
        torcs-1.3.7-patched/src/drivers/lliaw/ObstacleSensors.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/ObstacleSensors.h
        torcs-1.3.7-patched/src/drivers/lliaw/pathfinder.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/pathfinder.h
        torcs-1.3.7-patched/src/drivers/lliaw/sensors.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/sensors.h
        torcs-1.3.7-patched/src/drivers/lliaw/SimpleParser.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/SimpleParser.h
        torcs-1.3.7-patched/src/drivers/lliaw/spline.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/spline.h
        torcs-1.3.7-patched/src/drivers/lliaw/trackdesc.cpp
        torcs-1.3.7-patched/src/drivers/lliaw/trackdesc.h
        torcs-1.3.7-patched/src/drivers/olethros/cardata.cpp
        torcs-1.3.7-patched/src/drivers/olethros/cardata.h
        torcs-1.3.7-patched/src/drivers/olethros/driver.cpp
        torcs-1.3.7-patched/src/drivers/olethros/driver.h
        torcs-1.3.7-patched/src/drivers/olethros/geometry.cpp
        torcs-1.3.7-patched/src/drivers/olethros/geometry.h
        torcs-1.3.7-patched/src/drivers/olethros/learn.cpp
        torcs-1.3.7-patched/src/drivers/olethros/learn.h
        torcs-1.3.7-patched/src/drivers/olethros/linalg.h
        torcs-1.3.7-patched/src/drivers/olethros/olethros.cpp
        torcs-1.3.7-patched/src/drivers/olethros/opponent.cpp
        torcs-1.3.7-patched/src/drivers/olethros/opponent.h
        torcs-1.3.7-patched/src/drivers/olethros/pit.cpp
        torcs-1.3.7-patched/src/drivers/olethros/pit.h
        torcs-1.3.7-patched/src/drivers/olethros/spline.cpp
        torcs-1.3.7-patched/src/drivers/olethros/spline.h
        torcs-1.3.7-patched/src/drivers/olethros/strategy.cpp
        torcs-1.3.7-patched/src/drivers/olethros/strategy.h
        torcs-1.3.7-patched/src/drivers/olethros/TrackData.cpp
        torcs-1.3.7-patched/src/drivers/olethros/TrackData.h
        torcs-1.3.7-patched/src/drivers/olethros/Trajectory.cpp
        torcs-1.3.7-patched/src/drivers/olethros/Trajectory.h
        torcs-1.3.7-patched/src/drivers/scr_server/CarControl.cpp
        torcs-1.3.7-patched/src/drivers/scr_server/CarControl.h
        torcs-1.3.7-patched/src/drivers/scr_server/ObstacleSensors.cpp
        torcs-1.3.7-patched/src/drivers/scr_server/ObstacleSensors.h
        torcs-1.3.7-patched/src/drivers/scr_server/scr_server.cpp
        torcs-1.3.7-patched/src/drivers/scr_server/sensors.cpp
        torcs-1.3.7-patched/src/drivers/scr_server/sensors.h
        torcs-1.3.7-patched/src/drivers/scr_server/SimpleParser.cpp
        torcs-1.3.7-patched/src/drivers/scr_server/SimpleParser.h
        torcs-1.3.7-patched/src/drivers/sparkle/driver.cpp
        torcs-1.3.7-patched/src/drivers/sparkle/driver.h
        torcs-1.3.7-patched/src/drivers/sparkle/linalg.h
        torcs-1.3.7-patched/src/drivers/sparkle/opponent.cpp
        torcs-1.3.7-patched/src/drivers/sparkle/opponent.h
        torcs-1.3.7-patched/src/drivers/sparkle/pit.cpp
        torcs-1.3.7-patched/src/drivers/sparkle/pit.h
        torcs-1.3.7-patched/src/drivers/sparkle/sparkle.cpp
        torcs-1.3.7-patched/src/drivers/sparkle/spline.cpp
        torcs-1.3.7-patched/src/drivers/sparkle/spline.h
        torcs-1.3.7-patched/src/drivers/tita/berniw.h
        torcs-1.3.7-patched/src/drivers/tita/mycar.cpp
        torcs-1.3.7-patched/src/drivers/tita/mycar.h
        torcs-1.3.7-patched/src/drivers/tita/pathfinder.cpp
        torcs-1.3.7-patched/src/drivers/tita/pathfinder.h
        torcs-1.3.7-patched/src/drivers/tita/spline.cpp
        torcs-1.3.7-patched/src/drivers/tita/spline.h
        torcs-1.3.7-patched/src/drivers/tita/tita.cpp
        torcs-1.3.7-patched/src/drivers/tita/trackdesc.cpp
        torcs-1.3.7-patched/src/drivers/tita/trackdesc.h
        torcs-1.3.7-patched/src/interfaces/car.h
        torcs-1.3.7-patched/src/interfaces/graphic.h
        torcs-1.3.7-patched/src/interfaces/playerpref.h
        torcs-1.3.7-patched/src/interfaces/raceman.h
        torcs-1.3.7-patched/src/interfaces/replay.h
        torcs-1.3.7-patched/src/interfaces/robot.h
        torcs-1.3.7-patched/src/interfaces/simu.h
        torcs-1.3.7-patched/src/interfaces/telemetry.h
        torcs-1.3.7-patched/src/interfaces/track.h
        torcs-1.3.7-patched/src/libs/client/client.h
        torcs-1.3.7-patched/src/libs/client/entry.cpp
        torcs-1.3.7-patched/src/libs/client/errno.cpp
        torcs-1.3.7-patched/src/libs/client/exitmenu.cpp
        torcs-1.3.7-patched/src/libs/client/exitmenu.h
        torcs-1.3.7-patched/src/libs/client/mainmenu.cpp
        torcs-1.3.7-patched/src/libs/client/mainmenu.h
        torcs-1.3.7-patched/src/libs/client/optionmenu.cpp
        torcs-1.3.7-patched/src/libs/client/optionmenu.h
        torcs-1.3.7-patched/src/libs/client/splash.cpp
        torcs-1.3.7-patched/src/libs/client/splash.h
        torcs-1.3.7-patched/src/libs/confscreens/controlconfig.cpp
        torcs-1.3.7-patched/src/libs/confscreens/controlconfig.h
        torcs-1.3.7-patched/src/libs/confscreens/driverconfig.cpp
        torcs-1.3.7-patched/src/libs/confscreens/driverconfig.h
        torcs-1.3.7-patched/src/libs/confscreens/graphconfig.cpp
        torcs-1.3.7-patched/src/libs/confscreens/graphconfig.h
        torcs-1.3.7-patched/src/libs/confscreens/joystickconfig.cpp
        torcs-1.3.7-patched/src/libs/confscreens/joystickconfig.h
        torcs-1.3.7-patched/src/libs/confscreens/mouseconfig.cpp
        torcs-1.3.7-patched/src/libs/confscreens/mouseconfig.h
        torcs-1.3.7-patched/src/libs/confscreens/openglconfig.cpp
        torcs-1.3.7-patched/src/libs/confscreens/openglconfig.h
        torcs-1.3.7-patched/src/libs/confscreens/simuconfig.cpp
        torcs-1.3.7-patched/src/libs/confscreens/simuconfig.h
        torcs-1.3.7-patched/src/libs/confscreens/soundconfig.cpp
        torcs-1.3.7-patched/src/libs/confscreens/soundconfig.h
        torcs-1.3.7-patched/src/libs/learning/ANN.cpp
        torcs-1.3.7-patched/src/libs/learning/ANN.h
        torcs-1.3.7-patched/src/libs/learning/ann_policy.cpp
        torcs-1.3.7-patched/src/libs/learning/ann_policy.h
        torcs-1.3.7-patched/src/libs/learning/Distribution.cpp
        torcs-1.3.7-patched/src/libs/learning/Distribution.h
        torcs-1.3.7-patched/src/libs/learning/learn_debug.h
        torcs-1.3.7-patched/src/libs/learning/List.cpp
        torcs-1.3.7-patched/src/libs/learning/List.h
        torcs-1.3.7-patched/src/libs/learning/MathFunctions.cpp
        torcs-1.3.7-patched/src/libs/learning/MathFunctions.h
        torcs-1.3.7-patched/src/libs/learning/policy.cpp
        torcs-1.3.7-patched/src/libs/learning/policy.h
        torcs-1.3.7-patched/src/libs/learning/real.h
        torcs-1.3.7-patched/src/libs/learning/string_utils.cpp
        torcs-1.3.7-patched/src/libs/learning/string_utils.h
        torcs-1.3.7-patched/src/libs/math/linalg_t.h
        torcs-1.3.7-patched/src/libs/math/straight2_t.h
        torcs-1.3.7-patched/src/libs/math/v2_t.h
        torcs-1.3.7-patched/src/libs/math/v3_t.h
        torcs-1.3.7-patched/src/libs/math/v4_t.h
        torcs-1.3.7-patched/src/libs/musicplayer/musicplayer.cpp
        torcs-1.3.7-patched/src/libs/musicplayer/musicplayer.h
        torcs-1.3.7-patched/src/libs/musicplayer/OggSoundStream.cpp
        torcs-1.3.7-patched/src/libs/musicplayer/OggSoundStream.h
        torcs-1.3.7-patched/src/libs/musicplayer/OpenALMusicPlayer.cpp
        torcs-1.3.7-patched/src/libs/musicplayer/OpenALMusicPlayer.h
        torcs-1.3.7-patched/src/libs/musicplayer/SoundStream.cpp
        torcs-1.3.7-patched/src/libs/musicplayer/SoundStream.h
        torcs-1.3.7-patched/src/libs/portability/portability.h
        torcs-1.3.7-patched/src/libs/raceengineclient/raceengine.cpp
        torcs-1.3.7-patched/src/libs/raceengineclient/raceengine.h
        torcs-1.3.7-patched/src/libs/raceengineclient/racegl.cpp
        torcs-1.3.7-patched/src/libs/raceengineclient/racegl.h
        torcs-1.3.7-patched/src/libs/raceengineclient/raceinit.cpp
        torcs-1.3.7-patched/src/libs/raceengineclient/raceinit.h
        torcs-1.3.7-patched/src/libs/raceengineclient/racemain.cpp
        torcs-1.3.7-patched/src/libs/raceengineclient/racemain.h
        torcs-1.3.7-patched/src/libs/raceengineclient/racemanmenu.cpp
        torcs-1.3.7-patched/src/libs/raceengineclient/racemanmenu.h
        torcs-1.3.7-patched/src/libs/raceengineclient/raceresults.cpp
        torcs-1.3.7-patched/src/libs/raceengineclient/raceresults.h
        torcs-1.3.7-patched/src/libs/raceengineclient/racestate.cpp
        torcs-1.3.7-patched/src/libs/raceengineclient/racestate.h
        torcs-1.3.7-patched/src/libs/raceengineclient/singleplayer.cpp
        torcs-1.3.7-patched/src/libs/raceengineclient/singleplayer.h
        torcs-1.3.7-patched/src/libs/racescreens/carsetupscreen.cpp
        torcs-1.3.7-patched/src/libs/racescreens/driverselect.cpp
        torcs-1.3.7-patched/src/libs/racescreens/fileselect.cpp
        torcs-1.3.7-patched/src/libs/racescreens/loadingscreen.cpp
        torcs-1.3.7-patched/src/libs/racescreens/miscscreens.cpp
        torcs-1.3.7-patched/src/libs/racescreens/pitmenu.cpp
        torcs-1.3.7-patched/src/libs/racescreens/racemenu.cpp
        torcs-1.3.7-patched/src/libs/racescreens/racescreens.h
        torcs-1.3.7-patched/src/libs/racescreens/results.cpp
        torcs-1.3.7-patched/src/libs/racescreens/trackselect.cpp
        torcs-1.3.7-patched/src/libs/robottools/robottools.h
        torcs-1.3.7-patched/src/libs/robottools/rttelem.cpp
        torcs-1.3.7-patched/src/libs/robottools/rttrack.cpp
        torcs-1.3.7-patched/src/libs/tgf/directory.cpp
        torcs-1.3.7-patched/src/libs/tgf/hash.cpp
        torcs-1.3.7-patched/src/libs/tgf/module.cpp
        torcs-1.3.7-patched/src/libs/tgf/os.cpp
        torcs-1.3.7-patched/src/libs/tgf/os.h
        torcs-1.3.7-patched/src/libs/tgf/params.cpp
        torcs-1.3.7-patched/src/libs/tgf/profiler.cpp
        torcs-1.3.7-patched/src/libs/tgf/tgf.cpp
        torcs-1.3.7-patched/src/libs/tgf/tgf.h
        torcs-1.3.7-patched/src/libs/tgf/trace.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/control.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/fg_gm.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/fg_gm.h
        torcs-1.3.7-patched/src/libs/tgfclient/glfeatures.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/glfeatures.h
        torcs-1.3.7-patched/src/libs/tgfclient/gui.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/gui.h
        torcs-1.3.7-patched/src/libs/tgfclient/guibutton.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guiedit.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guifont.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guifont.h
        torcs-1.3.7-patched/src/libs/tgfclient/guihelp.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guiimage.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guilabel.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guimenu.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guimenu.h
        torcs-1.3.7-patched/src/libs/tgfclient/guiobject.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guiscrollbar.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/guiscrollist.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/img.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/screen.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/screen_properties.h
        torcs-1.3.7-patched/src/libs/tgfclient/tgfclient.cpp
        torcs-1.3.7-patched/src/libs/tgfclient/tgfclient.h
        torcs-1.3.7-patched/src/libs/txml/gennmtab/gennmtab.c
        torcs-1.3.7-patched/src/libs/txml/asciitab.h
        torcs-1.3.7-patched/src/libs/txml/codepage.h
        torcs-1.3.7-patched/src/libs/txml/dllmain.c
        torcs-1.3.7-patched/src/libs/txml/filemap.h
        torcs-1.3.7-patched/src/libs/txml/gennmtab.c
        torcs-1.3.7-patched/src/libs/txml/hashtable.c
        torcs-1.3.7-patched/src/libs/txml/hashtable.h
        torcs-1.3.7-patched/src/libs/txml/iasciitab.h
        torcs-1.3.7-patched/src/libs/txml/latin1tab.h
        torcs-1.3.7-patched/src/libs/txml/nametab.h
        torcs-1.3.7-patched/src/libs/txml/utf8tab.h
        torcs-1.3.7-patched/src/libs/txml/xml.cpp
        torcs-1.3.7-patched/src/libs/txml/xml.h
        torcs-1.3.7-patched/src/libs/txml/xmldef.h
        torcs-1.3.7-patched/src/libs/txml/xmlparse.c
        torcs-1.3.7-patched/src/libs/txml/xmlparse.h
        torcs-1.3.7-patched/src/libs/txml/xmlrole.c
        torcs-1.3.7-patched/src/libs/txml/xmlrole.h
        torcs-1.3.7-patched/src/libs/txml/xmltok.c
        torcs-1.3.7-patched/src/libs/txml/xmltok.h
        torcs-1.3.7-patched/src/libs/txml/xmltok_impl.c
        torcs-1.3.7-patched/src/libs/txml/xmltok_impl.h
        torcs-1.3.7-patched/src/linux/linuxspec.cpp
        torcs-1.3.7-patched/src/linux/linuxspec.h
        torcs-1.3.7-patched/src/linux/main.cpp
        torcs-1.3.7-patched/src/linux/osspec.h
        torcs-1.3.7-patched/src/misc/png2jpg/png2jpg.c
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/CarSoundData.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/CarSoundData.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grboard.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grboard.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grcam.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grcam.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grcar.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grcar.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grcarlight.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grcarlight.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grloadac.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grloadsgi.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grmain.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grmain.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grmultitexstate.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grmultitexstate.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grscene.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grscene.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grscreen.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grscreen.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grshadow.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grshadow.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grskidmarks.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grskidmarks.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grsmoke.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grsmoke.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grsound.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grsound.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grssgext.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grtexture.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grtexture.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grtrackmap.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grtrackmap.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grutil.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grutil.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grvertexarray.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grvtxtable.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/grvtxtable.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/OpenalSoundInterface.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/PlibSoundInterface.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/QSoundChar.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/sound_defines.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/SoundInterface.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/SoundInterface.h
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/ssggraph.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/TorcsSound.cpp
        torcs-1.3.7-patched/src/modules/graphic/ssggraph/TorcsSound.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/include/3D/Basic.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/include/3D/Matrix.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/include/3D/Point.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/include/3D/Quaternion.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/include/3D/Tuple3.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/include/3D/Tuple4.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/include/3D/Vector.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/include/SOLID/solid.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/AlgoTable.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/BBox.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/BBoxTree.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/BBoxTree.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Box.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Box.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/C-api.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Complex.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Complex.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Cone.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Cone.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Convex.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Convex.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Cylinder.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Cylinder.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Encounter.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Endpoint.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Endpoint.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/IndexArray.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Object.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Object.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Polygon.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Polygon.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Polyhedron.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Polyhedron.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Polytope.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Response.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Response.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/RespTable.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/RespTable.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Shape.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Simplex.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Simplex.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Sphere.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Sphere.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Transform.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/Transform.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/SOLID-2.0/src/VertexBase.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/aero.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/aero.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/axle.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/axle.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/brake.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/brake.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/car.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/carstruct.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/categories.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/collide.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/differential.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/differential.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/engine.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/engine.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/sim.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/simu.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/simuitf.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/steer.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/steer.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/susp.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/susp.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/transmission.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/transmission.h
        torcs-1.3.7-patched/src/modules/simu/simuv2/wheel.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv2/wheel.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/aero.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/aero.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/axle.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/axle.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/brake.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/brake.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/car.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/carstruct.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/categories.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/collide.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/differential.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/differential.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/engine.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/engine.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/Options.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/sim.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/simu.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/simuitf.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/SimulationOptions.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/SimulationOptions.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/steer.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/steer.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/susp.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/susp.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/transmission.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/transmission.h
        torcs-1.3.7-patched/src/modules/simu/simuv3/wheel.cpp
        torcs-1.3.7-patched/src/modules/simu/simuv3/wheel.h
        torcs-1.3.7-patched/src/modules/telemetry/telemetry.cpp
        torcs-1.3.7-patched/src/modules/telemetry/telemetryitf.cpp
        torcs-1.3.7-patched/src/modules/telemetry/tlm.h
        torcs-1.3.7-patched/src/modules/track/track.cpp
        torcs-1.3.7-patched/src/modules/track/track3.cpp
        torcs-1.3.7-patched/src/modules/track/track4.cpp
        torcs-1.3.7-patched/src/modules/track/trackinc.h
        torcs-1.3.7-patched/src/modules/track/trackitf.cpp
        torcs-1.3.7-patched/src/modules/track/trackutil.cpp
        torcs-1.3.7-patched/src/tools/accc/ac3dgroup.cpp
        torcs-1.3.7-patched/src/tools/accc/ac3dload.cpp
        torcs-1.3.7-patched/src/tools/accc/accc.h
        torcs-1.3.7-patched/src/tools/accc/mainaccc.cpp
        torcs-1.3.7-patched/src/tools/nfs2ac/mainnfs2ac.cpp
        torcs-1.3.7-patched/src/tools/nfsperf/mainnfsperf.cpp
        torcs-1.3.7-patched/src/tools/texmapper/maintexmapper.cpp
        torcs-1.3.7-patched/src/tools/texmapper/ssgLocal.h
        torcs-1.3.7-patched/src/tools/texmapper/ssgSaveAC.cpp
        torcs-1.3.7-patched/src/tools/trackgen/ac3d.cpp
        torcs-1.3.7-patched/src/tools/trackgen/ac3d.h
        torcs-1.3.7-patched/src/tools/trackgen/easymesh.cpp
        torcs-1.3.7-patched/src/tools/trackgen/easymesh.h
        torcs-1.3.7-patched/src/tools/trackgen/elevation.cpp
        torcs-1.3.7-patched/src/tools/trackgen/elevation.h
        torcs-1.3.7-patched/src/tools/trackgen/maintrackgen.cpp
        torcs-1.3.7-patched/src/tools/trackgen/objects.cpp
        torcs-1.3.7-patched/src/tools/trackgen/objects.h
        torcs-1.3.7-patched/src/tools/trackgen/raceline.cpp
        torcs-1.3.7-patched/src/tools/trackgen/relief.cpp
        torcs-1.3.7-patched/src/tools/trackgen/relief.h
        torcs-1.3.7-patched/src/tools/trackgen/track.cpp
        torcs-1.3.7-patched/src/tools/trackgen/trackgen.h
        torcs-1.3.7-patched/src/tools/trackgen/util.cpp
        torcs-1.3.7-patched/src/tools/trackgen/util.h
        torcs-1.3.7-patched/src/windows/include/AL/al.h
        torcs-1.3.7-patched/src/windows/include/AL/alc.h
        torcs-1.3.7-patched/src/windows/include/AL/alctypes.h
        torcs-1.3.7-patched/src/windows/include/AL/altypes.h
        torcs-1.3.7-patched/src/windows/include/AL/alut.h
        torcs-1.3.7-patched/src/windows/include/GL/glext.h
        torcs-1.3.7-patched/src/windows/include/GL/glut.h
        torcs-1.3.7-patched/src/windows/include/GL/wglext.h
        torcs-1.3.7-patched/src/windows/include/ogg/ogg.h
        torcs-1.3.7-patched/src/windows/include/ogg/os_types.h
        torcs-1.3.7-patched/src/windows/include/plib/js.h
        torcs-1.3.7-patched/src/windows/include/plib/sg.h
        torcs-1.3.7-patched/src/windows/include/plib/sl.h
        torcs-1.3.7-patched/src/windows/include/plib/slPortability.h
        torcs-1.3.7-patched/src/windows/include/plib/sm.h
        torcs-1.3.7-patched/src/windows/include/plib/ssg.h
        torcs-1.3.7-patched/src/windows/include/plib/ssgaFire.h
        torcs-1.3.7-patched/src/windows/include/plib/ssgaLensFlare.h
        torcs-1.3.7-patched/src/windows/include/plib/ssgaParticleSystem.h
        torcs-1.3.7-patched/src/windows/include/plib/ssgaScreenDump.h
        torcs-1.3.7-patched/src/windows/include/plib/ssgaShapes.h
        torcs-1.3.7-patched/src/windows/include/plib/ssgAux.h
        torcs-1.3.7-patched/src/windows/include/plib/ssgaWaveSystem.h
        torcs-1.3.7-patched/src/windows/include/plib/ssgconf.h
        torcs-1.3.7-patched/src/windows/include/plib/ul.h
        torcs-1.3.7-patched/src/windows/include/vorbis/codec.h
        torcs-1.3.7-patched/src/windows/include/vorbis/vorbisenc.h
        torcs-1.3.7-patched/src/windows/include/vorbis/vorbisfile.h
        torcs-1.3.7-patched/src/windows/include/png.h
        torcs-1.3.7-patched/src/windows/include/pngconf.h
        torcs-1.3.7-patched/src/windows/include/pnglibconf.h
        torcs-1.3.7-patched/src/windows/include/zconf.h
        torcs-1.3.7-patched/src/windows/include/zlib.h
        torcs-1.3.7-patched/src/windows/main.cpp
        torcs-1.3.7-patched/src/windows/osspec.h
        torcs-1.3.7-patched/src/windows/windowsspec.cpp
        torcs-1.3.7-patched/src/windows/windowsspec.h
        torcs-1.3.7-patched/config.h
        torcs-1.3.7-patched/resource.h)

add_executable(torcs_server ${SOURCE_FILES})